--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -117,6 +117,8 @@ dev_dependencies:
   lints: ^5.1.1
   flutter_lints: ^5.0.0
   dmg: ^0.1.3
+  args: ^2.7.0
+  crypto: ^3.0.6
 
 dependency_overrides:
   dart_style: ^2.2.3
