--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -98,14 +98,14 @@ jobs:
           dart pub global activate fastforge
       - name: Setup-Linux
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt-get update
-            sudo apt-get install -y libgtk-3-dev libnss3 libasound2 libgbm-dev
-            cargo install flutter_rust_bridge_codegen@2.9.0
-            rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
-            cd packages/app
-            fastforge release --name=release --platform linux --targets deb
-          fi
+          if: matrix.platform == 'linux'
+          run: |
+              sudo apt-get update
+              sudo apt-get install -y libgtk-3-dev libnss3 libasound2 libgbm-dev
+              cargo install flutter_rust_bridge_codegen@2.9.0
+              rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
+              cd packages/app
+              fastforge release --name=release --platform linux --targets deb
 
       - name: Upload
         uses: actions/upload-artifact@v4
