--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,6 +54,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          depth: 2
 
       # - name: Setup Android Signing
       #   if: startsWith(matrix.platform,'android')
@@ -67,11 +68,9 @@ jobs:
         with:
           flutter-version: "3.32.1"
           cache: true
-      - name: Install melos
-        run: dart pub global activate melos@7.0.0-dev.9
       - name: Install protoc
         run: |
-          PROTOC_VERSION=24.4
+          PROTOC_VERSION=29.3
           if [ "$RUNNER_OS" == "Linux" ]; then
             curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip"
             unzip "protoc-${PROTOC_VERSION}-linux-x86_64.zip" -d $HOME/.local
@@ -84,6 +83,8 @@ jobs:
           fi
           echo "$HOME/.local/bin" >> $GITHUB_PATH
         shell: bash
+      - name: Install melos
+        run: dart pub global activate melos 7.0.0-dev.9
       - name: Run melos bootstrap
         run: |
           export PATH="$PATH":"$HOME/.pub-cache/bin"
@@ -93,6 +94,7 @@ jobs:
           dart pub global activate fastforge
       - name: Setup-Linux
         run: |
+          echo "Building for platform: ${{ matrix.platform }}"
           if: matrix.platform == 'linux'
           run: |
               sudo apt-get update
