--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-          depth: 2
+          fetch-depth: 2
 
       # - name: Setup Android Signing
       #   if: startsWith(matrix.platform,'android')
@@ -93,16 +93,15 @@ jobs:
         run: |
           dart pub global activate fastforge
       - name: Setup-Linux
+        if: ${{matrix.platform == 'linux'}}
         run: |
           echo "Building for platform: ${{ matrix.platform }}"
-          if: matrix.platform == 'linux'
-          run: |
-              sudo apt-get update
-              sudo apt-get install -y libgtk-3-dev libnss3 libasound2 libgbm-dev
-              cargo install flutter_rust_bridge_codegen@2.9.0
-              rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
-              cd packages/app
-              fastforge release --name=release --platform linux --targets deb
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libnss3 libasound2 libgbm-dev
+          cargo install flutter_rust_bridge_codegen@2.9.0
+          rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
+          cd packages/app
+          fastforge release --name=release --platform linux --targets deb
 
       - name: Upload
         uses: actions/upload-artifact@v4
