--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -85,13 +85,10 @@ jobs:
         shell: bash
       - name: Install melos
         run: dart pub global activate melos 7.0.0-dev.9
-      - name: Run melos bootstrap
-        run: |
-          export PATH="$PATH":"$HOME/.pub-cache/bin"
-          melos bootstrap
       - name: Setup-fastforge
         run: |
           dart pub global activate fastforge
+          fastforge --version
       - name: Setup-Linux
         if: ${{matrix.platform == 'linux'}}
         run: |
@@ -100,9 +97,15 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libnss3 libasound2 libgbm-dev
           cargo install flutter_rust_bridge_codegen@2.9.0
           rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
-          cd packages/app
-          fastforge release --name=release --platform=linux --targets=deb
-
+        cache: true
+      - name: Run melos bootstrap
+        run: |
+          export PATH="$PATH":"$HOME/.pub-cache/bin"
+          melos bootstrap
+      - name: Build-Linux
+        if: ${{matrix.platform == 'linux'}}
+        run: |
+          cd packages/app && fastforge release --name=release --platform=linux --targets=deb
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
