--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -106,7 +106,8 @@ jobs:
         working-directory: ./packages/app/
         run: |
           ls -la
-          fastforge release --name=release-dev-linux-deb,release-dev-linux-rpm,release-dev-linux-appimage
+          fastforge --help
+          fastforge release --name=release --jobs=release-dev-linux-deb,release-dev-linux-rpm,release-dev-linux-appimage
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
