--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -70,13 +70,15 @@ jobs:
           cache: true
       - name: Install protoc
         run: |
-          PROTOC_VERSION=29.3
           if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt install -y protobuf-compiler
+            echo "PROTOC=$(which protoc)" >> $GITHUB_ENV
           elif [ "$RUNNER_OS" == "macOS" ]; then
             brew install protobuf
+            echo "PROTOC=$(which protoc)" >> $GITHUB_ENV
           elif [ "$RUNNER_OS" == "Windows" ]; then
             winget install protobuf
+            echo "PROTOC=$(where.exe protoc)" >> $GITHUB_ENV
           fi
           protoc --version
         shell: bash
@@ -102,10 +104,14 @@ jobs:
         if: ${{matrix.platform == 'linux'}}
         working-directory: ./packages/app/
         run: |
+          if ! command -v protoc &> /dev/null; then
+            echo "Error: protoc could not be found"
+            exit 1
+          fi
           echo "PROJECT_NAME=Keychat" > .env
           ls -la
           fastforge --help
-          fastforge release --name=release --jobs=release-dev-linux-deb,release-dev-linux-rpm,release-dev-linux-appimage
+          fastforge release --name=release --jobs=release-dev-linux-deb,release-dev-linux-rpm,release-dev-linux-appimage --flutter-build-args=verbose
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
