--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,14 +94,9 @@ jobs:
         if: ${{matrix.platform == 'linux'}}
         working-directory: ./packages/app/
         run: |
-          if ! command -v protoc &> /dev/null; then
-            echo "Error: protoc could not be found"
-            exit 1
-          fi
           echo "PROJECT_NAME=Keychat" > .env
           ls -la
-          fastforge release --help
-          fastforge release --name=release --jobs=release-dev-linux-deb,release-dev-linux-rpm,release-dev-linux-appimage
+          fastforge package --name=release --platform=linux --flutter-build-args=verbose
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
