--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,6 +96,8 @@ jobs:
         run: |
           echo "PROJECT_NAME=Keychat" > .env
           ls -la
+          protoc --version
+          fastforge package --help
           fastforge package --name=release --platform=linux --flutter-build-args=verbose
       - name: Upload
         uses: actions/upload-artifact@v4
