--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,7 +96,10 @@ jobs:
         run: |
           echo "PROJECT_NAME=Keychat" > .env
           ls -la
-          fastforge package --platform=linux --targets=deb --flutter-build-args=verbose
+          export PROTOC=$(which protoc)
+          protoc --version
+          fastforge package --platform=linux --targets=deb 
+          # --flutter-build-args=verbose
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
