--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,6 +66,7 @@ jobs:
           echo "sha_short=$SHA_SHORT" >> $GITHUB_OUTPUT
       - name: Set version
         id: version_step
+        working-directory: ./packages/app/
         run: |
           VERSION=$(yq '.version' pubspec.yaml)
           echo "VERSION: $VERSION."
@@ -98,13 +99,6 @@ jobs:
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           cargo install flutter_rust_bridge_codegen@2.9.0
           rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
-      - name: Setup rust
-        if: startsWith(matrix.os, 'windows-11-arm')
-        run: |
-          Invoke-WebRequest -Uri "https://win.rustup.rs/aarch64" -OutFile rustup-init.exe
-          .\rustup-init.exe -y --default-toolchain stable
-          $cargoPath = "$env:USERPROFILE\.cargo\bin"
-          Add-Content $env:GITHUB_PATH $cargoPath
 
       # - name: Setup Android Signing
       #   if: startsWith(matrix.platform,'android')
@@ -141,16 +135,34 @@ jobs:
           fastforge package \
             --flutter-build-args "dart-define-from-file=.env,target=lib/main.dart" \
             --platform linux \
-            --targets deb \
+            --targets deb,rpm,appimage \
             --artifact-name '{{name}}-{{build_name}}+{{build_number}}-{{platform}}-amd64.{{ext}}'
+
+      - name: Generate sha256
+        run: |
+          cd ./dist
+          for file in $(find . -type f -not -name "*.sha256"); do
+            sha256sum "$file" > "${file}.sha256"
+          done
+      # - name: Patch release.md
+      #   run: |
+      #     version=$(echo "${{ github.ref_name }}" | sed 's/^v//')
+      #     sed "s|VERSION|$version|g" ./.github/release_template.md >> release.md
+
+      # - name: Release
+      #   uses: softprops/action-gh-release@v2
+      #   with:
+      #     files: ./dist/*
+      #     body_path: "./release.md"
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: Keychat-${{ needs.create-release.outputs.version_short}}-${{ matrix.platform }}${{ matrix.arch && format('-{0}', matrix.arch) }}
+          name: artifact-${{ matrix.platform }}${{ matrix.arch && format('-{0}', matrix.arch) }}
           path: ./dist
           overwrite: true
-        env:
-          VERSION_SHORT: ${{ needs.create-release.outputs.version_short }}
-          BUILD_NUMBER: ${{ needs.create-release.outputs.build_number }}
-          SHA: ${{ needs.create-release.outputs.sha }}
-          TAG_NAME: ${{ needs.create-release.outputs.tag_name }}
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          rm -f .env
+          cd ./packages/app/ && rm -f .env
