--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -141,3 +141,8 @@ flutter_native_splash:
   image: assets/images/logo.png
   color_dark: "#121212"
   image_dark: assets/images/logo.png
+
+msix_config:
+  publisher: Keychat
+  display_name: Keychat
+  logo: assets/images/logo.png
