--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -143,6 +143,15 @@ flutter_native_splash:
   image_dark: assets/images/logo.png
 
 msix_config:
-  publisher: Keychat
   display_name: Keychat
+  publisher: CN=Keychat, O=Keychat, L=Singapore, S=Singapore, C=SG
+  identity_name: Keychat
+  description: Keychat is the super app for Bitcoiners. Autonomous IDs, Bitcoin ecash wallet, secure chat, and rich mini apps — all in Keychat.
   logo: assets/images/logo.png
+  background_color: "#ffffff"
+  background_color_dark: "#121212"
+  capabilities:
+    - internetClient
+    - privateNetworkClientServer
+    - documentsLibrary
+    - webcam
