--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -28,7 +28,7 @@ cargokit {
 }
 
 android {
-    compileSdkVersion localProperties.getProperty('flutter.compileSdkVersion').toInteger()
+    compileSdkVersion localProperties.getProperty('flutter.compileSdkVersion','35').toInteger()
     namespace "com.keychat.io"
     ndkVersion flutterNDKVersion
     compileOptions {
@@ -48,7 +48,7 @@ android {
         applicationId "com.keychat.io"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion localProperties.getProperty('flutter.minSdkVersion','34').toInteger()
+        minSdkVersion localProperties.getProperty('flutter.minSdkVersion','31').toInteger()
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
